--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>myPortfolio</title>
 </head>
-<body>
+<body class="font-open-sans">
+
+    <!-- header section -->
+
+    <header>
+        <nav class="logo">
+            <div>
+                <h2>Ma<span>r</span>y</h2>
+            </div>
+            <ul class="menu">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn">Hire me</button></li>
+        </nav>
+    </header>
     
+
+
+
 </body>
 </html>
